feat: complete first stage of linking-hell migration.
Specifically:

Break current build (just bringing OSS closer to how things are built internally):
Remove tf_binary_additional_srcs() and tf_binary_additional_data_deps() macros. It will affect the following macros:
tf_shared_library_deps()
tf_cc_shared_object()
tf_cc_binary()
tf_gen_op_wrapper_cc()
tf_gen_op_wrapper_py()
tf_cc_test()
tf_gpu_only_cc_test()
tf_cc_test_mkl()
tf_java_test()
pybind_extension_opensource()
tf_java_op_gen_srcjar()
tf_to_tflite()
Remove tf_binary_pybind_deps() macros. It will affect following macros:
tf_python_pybind_extension_opensource()
Likely remove cc_binary() inside tf_kernel_library() as it is not used (around 500 targets)
Clean up most common header-only targets:
Remove cc_header_only_library() replace its usage with actual deps (no need to depend on header-only)
Remove header-only target creation (and its aliasing) in tf_proto_library() macro
Migrate to normal `cc_proto_library()` rule, same as used in protobuf 3.22.x+ - this will unblock updating protobuf to further versions
Remove check_deps() targets. Are they still needed, would they make sense in new architecture?
Remove creation of libtensorflow_framework and libtensorflow_cc targets and all the stuff facilitating it.

--- a/tensorflow/compiler/tf2tensorrt/BUILD
+++ b/tensorflow/compiler/tf2tensorrt/BUILD
@@ -280,7 +280,6 @@ cc_library(
         "//tensorflow/core:lib",
         "//tensorflow/core:lib_internal",
         "//tensorflow/core:lib_proto_parsing",
-        "//tensorflow/core:stream_executor_headers_lib",
         "//tensorflow/core/common_runtime:core_cpu_lib_no_ops",
         "//tensorflow/core/grappler/costs:graph_properties",
         "//tensorflow/core/platform:stream_executor",
@@ -430,9 +429,9 @@ tf_cuda_library(
         ":trt_parameters",
         ":utils",
         "//tensorflow/core:framework",
-        "//tensorflow/core:framework_headers_lib",
+        "//tensorflow/core/framework:reader_base",
         "//tensorflow/core:lib",
-        "//tensorflow/core:stream_executor_headers_lib",
+        "//tensorflow/core/platform:stream_executor",
         "//tensorflow/core/platform:status",
         "//tensorflow/core/profiler/lib:traceme",
         "@com_google_absl//absl/strings",
@@ -515,7 +514,8 @@ tf_cuda_library(
         ":trt_engine_utils",
         ":trt_logging",
         ":utils",
-        "//tensorflow/core:framework_headers_lib",
+        "//tensorflow/core:framework",
+        "//tensorflow/core/framework:reader_base",
         "//tensorflow/core:framework_lite",
         "//tensorflow/core:gpu_runtime",
         "//tensorflow/core:graph",
@@ -530,7 +530,8 @@ tf_cuda_library(
     hdrs = ["utils/trt_allocator.h"],
     features = ["-layering_check"],
     deps = [
-        "//tensorflow/core:framework_headers_lib",
+        "//tensorflow/core:framework",
+        "//tensorflow/core/framework:reader_base",
         "//tensorflow/core:framework_lite",
         "//tensorflow/core:lib_proto_parsing",
     ] + if_tensorrt([":tensorrt_lib"]),
@@ -1050,51 +1051,9 @@ tf_cuda_library(
 pybind_extension(
     name = "_pywrap_py_utils",
     srcs = ["utils/py_utils_wrapper.cc"],
-    dynamic_deps = select({
-        "//tensorflow:macos": ["//tensorflow:libtensorflow_framework.%s.dylib" % VERSION],
-        "//conditions:default": ["//tensorflow:libtensorflow_framework.so.%s" % VERSION],
-        "//tensorflow:windows": [],
-    }),
     enable_stub_generation = True,
     pytype_srcs = [
         "_pywrap_py_utils.pyi",
-    ],
-    static_deps = [
-        "@bazel_tools//:__subpackages__",
-        "@boringssl//:__subpackages__",
-        "@com_github_googlecloudplatform_tensorflow_gcp_tools//:__subpackages__",
-        "@com_google_absl//:__subpackages__",
-        "@com_google_googleapis//:__subpackages__",
-        "@com_google_protobuf//:__subpackages__",
-        "@com_googlesource_code_re2//:__subpackages__",
-        "@curl//:__subpackages__",
-        "@double_conversion//:__subpackages__",
-        "@eigen_archive//:__subpackages__",
-        "@farmhash_archive//:__subpackages__",
-        "@fft2d//:__subpackages__",
-        "@gif//:__subpackages__",
-        "@highwayhash//:__subpackages__",
-        "@hwloc//:__subpackages__",
-        "@jsoncpp_git//:__subpackages__",
-        "@libjpeg_turbo//:__subpackages__",
-        "@llvm_openmp//:__subpackages__",
-        "@llvm-project//:__subpackages__",
-        "@llvm_terminfo//:__subpackages__",
-        "@llvm_zlib//:__subpackages__",
-        "@local_config_cuda//:__subpackages__",
-        "@local_config_git//:__subpackages__",
-        "@local_config_rocm//:__subpackages__",
-        "@local_config_tensorrt//:__subpackages__",
-        "@local_execution_config_platform//:__subpackages__",
-        "@ml_dtypes//:__subpackages__",
-        "@nsync//:__subpackages__",
-        "@platforms//:__subpackages__",
-        "@pybind11//:__subpackages__",
-        "@snappy//:__subpackages__",
-        "//:__subpackages__",
-        "@zlib//:__subpackages__",
-        "@local_tsl//tsl:__subpackages__",
-        "@local_xla//xla:__subpackages__",
     ],
     deps = [
         ":common_utils",
