--- a/tensorflow/core/platform/cloud/BUILD
+++ b/tensorflow/core/platform/cloud/BUILD
@@ -98,7 +98,8 @@ cc_library(
         ":http_request",
         ":ram_file_block_cache",
         ":time_util",
-        "//tensorflow/core:framework_headers_lib",
+        "//tensorflow/core:framework",
+        "//tensorflow/core/framework:reader_base",
         "//tensorflow/core:lib",
         "//tensorflow/core:lib_internal",
         "//tensorflow/core/platform:numbers",
@@ -135,7 +136,8 @@ cc_library(
         ":http_request",
         ":ram_file_block_cache",
         ":time_util",
-        "//tensorflow/core:framework_headers_lib",
+        "//tensorflow/core:framework",
+        "//tensorflow/core/framework:reader_base",
         "//tensorflow/core:lib",
         "//tensorflow/core:lib_internal",
         "//tensorflow/core/platform:numbers",
@@ -156,7 +158,8 @@ cc_library(
     hdrs = ["http_request.h"],
     copts = tsl_copts(),
     deps = [
-        "//tensorflow/core:framework_headers_lib",
+        "//tensorflow/core:framework",
+        "//tensorflow/core/framework:reader_base",
         "//tensorflow/core:lib_internal",
         "//tensorflow/core/platform:stringpiece",
         "@local_tsl//tsl/platform/cloud:http_request",
@@ -169,7 +172,8 @@ cc_library(
     copts = tsl_copts(),
     deps = [
         ":http_request",
-        "//tensorflow/core:framework_headers_lib",
+        "//tensorflow/core:framework",
+        "//tensorflow/core/framework:reader_base",
         "//tensorflow/core:lib_internal",
         "//tensorflow/core/platform:scanner",
         "//tensorflow/core/platform:str_util",
@@ -296,7 +300,8 @@ cc_library(
     ],
     copts = tsl_copts(),
     deps = [
-        "//tensorflow/core:framework_headers_lib",
+        "//tensorflow/core:framework",
+        "//tensorflow/core/framework:reader_base",
         "//tensorflow/core:lib_internal",
         "@local_tsl//tsl/platform/cloud:time_util",
     ],
