--- a/tensorflow/java/BUILD
+++ b/tensorflow/java/BUILD
@@ -6,7 +6,6 @@ load(":src/gen/gen_ops.bzl", "tf_java_op_gen_srcjar")
 load(
     "//tensorflow:tensorflow.bzl",
     "VERSION",
-    "tf_binary_additional_srcs",
     "tf_cc_binary",
     "tf_cc_test",
     "tf_copts",
@@ -26,7 +25,7 @@ java_library(
         ":java_op_sources",
         ":java_sources",
     ],
-    data = tf_binary_additional_srcs() + [":libtensorflow_jni"],
+    data = [":libtensorflow_jni"],
     javacopts = JAVACOPTS,
     plugins = [":processor"],
     resources = [":java_resources"],
@@ -460,7 +459,7 @@ genrule(
     outs = ["pom.xml"],
     cmd = "$(location generate_pom) >$@",
     output_to_bindir = 1,
-    tools = [":generate_pom"] + tf_binary_additional_srcs(),
+    tools = [":generate_pom"],
 )
 
 tf_cc_binary(
