cmake: run `flatc` for `.fbs` files, update `TFLITE_DELEGATES_GPU_CL_SRCS`

--- a/tensorflow/lite/CMakeLists.txt
+++ b/tensorflow/lite/CMakeLists.txt
@@ -302,15 +302,73 @@ if(TFLITE_ENABLE_GPU)
     # OpenGL::GLES3 requires CMake 3.27
     find_package(OpenGL REQUIRED COMPONENTS GLES3)
     list(APPEND TFLITE_TARGET_DEPENDENCIES OpenGL::GLES3 ${OPENGL_egl_LIBRARY})
-    list(APPEND TFLITE_TARGET_PRIVATE_DEFINITIONS "EGL_EGLEXT_PROTOTYPES")
   else()
     find_package(opengl_headers REQUIRED)
     find_package(egl_headers REQUIRED)
   endif()
-  populate_tflite_source_vars(
-    "delegates/gpu/cl" TFLITE_DELEGATES_GPU_CL_SRCS
-    FILTER "(_test|gl_interop|gpu_api_delegate|egl_sync)\\.(cc|h)$"
-  )
+  if(ANDROID)
+    populate_tflite_source_vars("delegates/utils" TFLITE_DELEGATES_UTILS_SRCS FILTER "(_test)\\.(cc|h)$")
+    populate_tflite_source_vars("async" TFLITE_ASYNC_SRCS FILTER "(_test)\\.(cc|h)$")
+    list(APPEND TFLITE_DELEGATES_GPU_SRCS
+      ${TFLITE_SOURCE_DIR}/delegates/gpu/android_version.cc
+      ${TFLITE_SOURCE_DIR}/delegates/gpu/android_hardware_buffer.cc
+      ${TFLITE_SOURCE_DIR}/delegates/gpu/async_buffers.cc
+      ${TFLITE_DELEGATES_UTILS_SRCS}
+      ${TFLITE_ASYNC_SRCS}
+    )
+    list(APPEND TFLITE_TARGET_DEPENDENCIES android nativewindow)
+  endif()
+  if(TFLITE_ENABLE_GLES3)
+    if(FLATBUFFERS_FLATC_EXECUTABLE)
+      set(FLATC ${FLATBUFFERS_FLATC_EXECUTABLE})
+    else()
+      set(FLATC flatc)
+    endif()
+    add_custom_command(
+      OUTPUT
+        ${TFLITE_SOURCE_DIR}/delegates/gpu/gl/common_generated.h
+        ${TFLITE_SOURCE_DIR}/delegates/gpu/gl/metadata_generated.h
+        ${TFLITE_SOURCE_DIR}/delegates/gpu/gl/workgroups_generated.h
+        ${TFLITE_SOURCE_DIR}/delegates/gpu/gl/compiled_model_generated.h
+      WORKING_DIRECTORY ${TFLITE_SOURCE_DIR}/delegates/gpu/gl
+      COMMAND ${FLATC} --cpp --scoped-enums -I ${TENSORFLOW_SOURCE_DIR} common.fbs
+      COMMAND ${FLATC} --cpp --scoped-enums -I ${TENSORFLOW_SOURCE_DIR} metadata.fbs
+      COMMAND ${FLATC} --cpp --scoped-enums -I ${TENSORFLOW_SOURCE_DIR} workgroups.fbs
+      COMMAND ${FLATC} --cpp --scoped-enums -I ${TENSORFLOW_SOURCE_DIR} compiled_model.fbs
+    )
+    populate_tflite_source_vars("delegates/gpu/gl" TFLITE_DELEGATES_GPU_GL_SRCS FILTER "(_test)\\.(cc|h)$")
+    populate_tflite_source_vars("delegates/gpu/gl/compiler" TFLITE_DELEGATES_GPU_GL_COMPILER_SRCS FILTER "(_test)\\.(cc|h)$")
+    populate_tflite_source_vars("delegates/gpu/gl/converters" TFLITE_DELEGATES_GPU_GL_CONVERTERS_SRCS FILTER "(_test)\\.(cc|h)$")
+    populate_tflite_source_vars("delegates/gpu/gl/kernels" TFLITE_DELEGATES_GPU_GL_KERNELS_SRCS FILTER "(_test)\\.(cc|h)$")
+    populate_tflite_source_vars("delegates/gpu/gl/workgroups" TFLITE_DELEGATES_GPU_GL_WORKGROUPS_SRCS FILTER "(_test)\\.(cc|h)$")
+    list(APPEND TFLITE_DELEGATES_GPU_SRCS
+      ${TFLITE_DELEGATES_GPU_GL_SRCS}
+      ${TFLITE_SOURCE_DIR}/delegates/gpu/gl/common_generated.h
+      ${TFLITE_SOURCE_DIR}/delegates/gpu/gl/metadata_generated.h
+      ${TFLITE_SOURCE_DIR}/delegates/gpu/gl/workgroups_generated.h
+      ${TFLITE_SOURCE_DIR}/delegates/gpu/gl/compiled_model_generated.h
+      ${TFLITE_DELEGATES_GPU_GL_COMPILER_SRCS}
+      ${TFLITE_DELEGATES_GPU_GL_CONVERTERS_SRCS}
+      ${TFLITE_DELEGATES_GPU_GL_KERNELS_SRCS}
+      ${TFLITE_DELEGATES_GPU_GL_WORKGROUPS_SRCS}
+    )
+  endif()
+  if(NOT TFLITE_ENABLE_GLES3)
+    populate_tflite_source_vars(
+      "delegates/gpu/cl" TFLITE_DELEGATES_GPU_CL_SRCS
+      FILTER "(_test|gl_interop|gpu_api_delegate|egl_sync)\\.(cc|h)$"
+    )
+    list(APPEND TFLITE_TARGET_PRIVATE_DEFINITIONS "CL_DELEGATE_NO_GL")
+  else()
+    populate_tflite_source_vars(
+      "delegates/gpu/cl" TFLITE_DELEGATES_GPU_CL_SRCS
+      FILTER "(_test)\\.(cc|h)$"
+    )
+    set_source_files_properties(delegates/gpu/cl/egl_sync.cc
+    PROPERTIES
+      COMPILE_DEFINITIONS "EGL_EGLEXT_PROTOTYPES"
+    )
+  endif()
   populate_tflite_source_vars(
     "delegates/gpu/cl/default" TFLITE_DELEGATES_GPU_CL_DEFAULT_SRCS
     FILTER "(_test)\\.(cc|h)$"
