Open visibility of tensorflow/core/tfrt/utils:friends to TFS
For testing only, not ready for merge

--- a/tensorflow/core/tfrt/utils/BUILD
+++ b/tensorflow/core/tfrt/utils/BUILD
@@ -25,7 +25,7 @@ package_group(
         "//tensorflow/core/runtime_fallback/...",
         "//tensorflow/core/tfrt/...",
         "//tensorflow/python/...",
-        # copybara:uncomment "//tensorflow_serving/...",
+        "//tensorflow_serving/...",
         # copybara:uncomment "//third_party/tf_runtime_google/...",
     ],
 )
